init connection with container storage
